Added sponsors: PitaPit and Waverly Barber Made so that all hyperlinks open in new tab Fixed flex for community page

--- a/community.html
+++ b/community.html
@@ -71,9 +71,9 @@
                     If any problems were to arise during your stay in Vancouver, the Consulate will be aware of your
                     presence here. Registration online is available here (attach link: https://lapordiri.indonesiavancouver.org)</p>
 
-                <a href="http://www.kemlu.go.id/vancouver">Visit their website here</a>
+                <a href="http://www.kemlu.go.id/vancouver" target="_blank">Visit their website here</a>
 
-                <p>Address: <a href="https://www.google.ca/maps/dir//1630+Alberni+St,+Vancouver,+BC+V6G+1A7/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x54867187c4cdb869:0x7edac35c354ccd52?sa=X&ved=2ahUKEwiH-vWag8bdAhWmslQKHWXnDLcQwwUwAHoECAMQAw">
+                <p>Address: <a href="https://www.google.ca/maps/dir//1630+Alberni+St,+Vancouver,+BC+V6G+1A7/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x54867187c4cdb869:0x7edac35c354ccd52?sa=X&ved=2ahUKEwiH-vWag8bdAhWmslQKHWXnDLcQwwUwAHoECAMQAw" target="_blank">
                 1630 Alberni St, Vancouver, B.C. V6G 1A6</a></p>
 
                 <p>Phone: (604) 682-8855, Fax: (604) 662-8396</p>
@@ -105,7 +105,7 @@
                 <p>CIDS focuses on areas such as diaspora capacity building, immigrant economic integration, bilateral
                     economic/trade relations between Canada and Indonesia, and economic and community development. </p>
 
-                <p><a href="www.cids2015.org">Visit Canada Indonesia Diaspora Society here</a></p>
+                <p><a href="www.cids2015.org" target="_blank">Visit Canada Indonesia Diaspora Society here</a></p>
             
             </div>
 
@@ -155,7 +155,7 @@
                 <p>(Weekdays) 7a.m. – 6p.m.
                 (Sat & Sun) : 8a.m. – 6p.m.</p>
                 -->
-                <p><a href="http://www.nusacoffeecompany.com/">Visit Nusa Coffee here</a></p>
+                <p><a href="http://www.nusacoffeecompany.com/" target="_blank">Visit Nusa Coffee here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -169,7 +169,7 @@
 
                 <p>ROLL UP YOUR SLEEVES, PUT ON YOUR BIB & LET'S GET CRACKING!</p>
 
-                <p><a href="http://www.theholycrab.ca/">Visit The Holy Crab here</a></p>
+                <p><a href="http://www.theholycrab.ca/" target="_blank">Visit The Holy Crab here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -181,7 +181,7 @@
                     their house special cakes, and their healthy (yes, healthy) fresh fruit bubble tea, ice cream and
                     other refreshments!</p>
 
-                <p><a href="https://www.instagram.com/kummecafe.media/">Visit KUMME CAFÉ Instagram here</a></p>
+                <p><a href="https://www.instagram.com/kummecafe.media/" target="_blank">Visit KUMME CAFÉ Instagram here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -196,7 +196,7 @@
                     Poké experts, Pokay has a “build your own bowl” option where you get to choose from a
                     selection of bases, proteins, toppings and to finish off, flavor it with your own choice of sauce!</p>
 
-                <p><a href="https://www.instagram.com/pokayvan/">Visit Pokay Instagram here</a></p>
+                <p><a href="https://www.instagram.com/pokayvan/" target="_blank">Visit Pokay Instagram here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -210,7 +210,7 @@
                     enjoy a selection of milk tea, milk cap, slush, yogurts and seasonal menus! They also have a
                     variety of toppings, including their newest one: crystal bubbles!</p>
 
-                <p><a href="https://www.facebook.com/kungfutea.bc/">Visit Kung Fu Tea Vancouver Facebook here</a></p>
+                <p><a href="https://www.facebook.com/kungfutea.bc/" target="_blank">Visit Kung Fu Tea Vancouver Facebook here</a></p>
             </div>
 
             <div class="sponsorBox">
@@ -225,7 +225,33 @@
                     sharing plates and plant-based options! Plus, they also have a HAPPY HOUR EVERYDAY from
                         3- 6.30pm!</p>
 
-                <p><a href="https://baodown-ubc.business.site/">Visit BaoDown UBC here</a></p>
+                <p><a href="https://baodown-ubc.business.site/" target="_blank">Visit BaoDown UBC here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Pita Pit UBC</div>
+                <div class="communityPic">
+                    <img src="media/pitapit.jpg" alt="pitapit" class="sponsorImg">
+                </div>
+
+                <p> We've got you boba, coffee, and different kinds of food, this time, we got you Pitas!
+                    Get <b>15% off</b> on pitas in PitaPit UBC, you can get creative and customize your own with different kinds of protein!
+                    And don't forget to start your healthy eating with PitaPit as they offer vegan choices too! </p>
+
+                <p><a href="https://www.instagram.com/pitapit_ubc/" target="_blank">Visit PitaPit UBC Instagram here</a></p>
+            </div>
+
+            <div class="sponsorBox">
+                <div class="communityTitle">Waverly Barber</div>
+                <div class="communityPic">
+                    <img src="media/waverly.jpg" alt="waverly-barber" class="sponsorImg">
+                </div>
+
+                <p> When you study abroad and got no time for self care, here's a solution for ya! Treat yourself to a
+                    haircut at Waverly Barber and get <b>20% off</b> with your GISAU card!
+                    They've got talented hairdressers with professional services to make you look extra fresh! </p>
+
+<!--                <p><a href="https://baodown-ubc.business.site/">Visit Waverly Barber here</a></p>-->
             </div>
         </div>
     </div>    
