Updated navbar team drop down Made navbar.html (every page use the same navbar, no need redundant updating) Created the team page for 2018 and 2017 Added memberpics for 2018 and 2017 Cleaned up code warnings

--- a/index.html
+++ b/index.html
@@ -24,45 +24,17 @@
     <link rel="stylesheet" href="css/event.css">
     <link rel="stylesheet" href="css/warungcs.css">
     <link rel="stylesheet" href="css/joinus.css">
+    <script src="css/navbar.js"></script>
 </head>
 
 <body>
-	<div class="navBar">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>                        
-              </button>
-              <a class="navbar-brand" id="gisauBrand" href="#">GISAU</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav" id="gisauTabs">
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#events">EVENTS</a></li>
-                <li><a href="team.html">TEAM</a></li>
-                <li><a href="community.html">PARTNERSHIP</a></li>
-                <li><a href="#contact">JOIN US</a></li>
-              </ul>
 
-              <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
-                <li><a href="#contact"><img src="media/email.png"></a></li>
-                <li><a href="https://www.facebook.com/gisaubc/"><img src="media/facebook.png"></a></li>
-                <li><a href="https://www.instagram.com/gisaubc/"><img src="media/instagram.png"></a></li>
-                <li><a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png"></a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </div>
+<div id="nav-placeholder"></div> <!-- navbar -->
 <!-- copy everything above this to create new page  -->
 
 <!---HOME PAGE________________________________________________________________________-->
 
-	<a name="home" id="home"></a>
+	<a id="home"></a>
 	<div class="homeImage" id="homeImage">
 		<div class="homelogo" id="homelogo">
 			<img src="media/gisaulogo.png" alt="gisaulogo" class="gisaulogo" id="gisaulogo">
@@ -72,7 +44,7 @@
         </div>
 		<div class="hometext">
 			<img src="media/hometext.png" alt="gado-gado" class="gisautext">
-            <a name="about" class="anchor" id="about"></a>
+            <a  class="anchor" id="about"></a>
 		</div>
     </div>   
 
@@ -126,7 +98,7 @@
         <div id="page1">
             <div class="eventTitle">
                 <img src="media/eventtitle.png" alt="our events" class="ourevents">
-                <a name="events" class="anchor" id="events"></a>
+                <a class="anchor" id="events"></a>
             </div>
             <div class="event_title_detail">
                 <h5> Our ultimate mission is to create a community that embodies the Indonesian warmth. With
@@ -186,7 +158,7 @@
 
         <!---CONTACT PAGE_____________________________________________________________________-->
         <div id="page3"> 
-            <a name="contact" class="anchor" id="contact"></a>
+            <a class="anchor" id="contact"></a>
             <div class="contact-page" id="contact-page">
                 
                 <div class="contactImage">
