--- a/community.html
+++ b/community.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/flickity.css">
     <script src="css/flickity.pkgd.js"></script>
     <!--BOOTSTRAP-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -22,40 +21,12 @@
     <link rel="stylesheet" href="css/warungcs.css">
     <link rel="stylesheet" href="css/community.css">
     <link rel="stylesheet" href="css/joinus.css">
+    <!-- JS -->
+    <script type="text/javascript" src="css/navbar.js"></script>
 </head>
 
-<body>
-	<div class="navBar">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>                        
-              </button>
-              <a class="navbar-brand" id="gisauBrand" href="#">GISAU</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav" id="gisauTabs">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="index.html#about">ABOUT</a></li>
-                <li><a href="index.html#events">EVENTS</a></li>
-                <li><a href="team.html">TEAM</a></li>
-                <li class="active"><a href="community.html">PARTNERSHIP</a></li>
-                <li><a href="index.html#contact">JOIN US</a></li>
-              </ul>
+<div id="nav-placeholder"></div> <!-- navbar -->
 
-              <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
-                <li><a href="#contact"><img src="media/email.png"></a></li>
-                <li><a href="https://www.facebook.com/gisaubc/"><img src="media/facebook.png"></a></li>
-                <li><a href="https://www.instagram.com/gisaubc"><img src="media/instagram.png"></a></li>
-                <li><a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png"></a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </div>
     <div class="communityPage">
         <div class="communityContainer">
             <div class="communityBox">
@@ -105,7 +76,7 @@
                 <p>CIDS focuses on areas such as diaspora capacity building, immigrant economic integration, bilateral
                     economic/trade relations between Canada and Indonesia, and economic and community development. </p>
 
-                <p><a href="www.cids2015.org" target="_blank">Visit Canada Indonesia Diaspora Society here</a></p>
+                <p><a href="http://cids2015.org/" target="_blank">Visit Canada Indonesia Diaspora Society here</a></p>
             
             </div>
 
@@ -257,7 +228,7 @@
     </div>    
     <footer>
         <div class="footsocial">
-            <a href="#contact"><img src="media/email.png" alt="fb" class="footsocial email"></a>
+            <a href="index.html#contact"><img src="media/email.png" alt="fb" class="footsocial email"></a>
             <a href="https://www.facebook.com/gisaubc/" target="_blank"><img src="media/facebook.png" alt="fb" class="footsocial facebook"></a>
             <a href="https://www.instagram.com/gisaubc/" target="_blank"><img src="media/instagram.png" alt="ig" class="footsocial instagram"></a>
             <a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png" alt="yt" class="footsocial youtube"></a>
@@ -266,4 +237,3 @@
             Copyright GISAU
         </div>
     </footer> 
-</body>
