--- a/event.html
+++ b/event.html
@@ -25,41 +25,13 @@
     <link rel="stylesheet" href="css/event_page.css">
     <link rel="stylesheet" href="css/warungcs.css">
     <link rel="stylesheet" href="css/joinus.css">
+    <script src="css/navbar.js"></script>
 </head>
 
 <body>
-<div class="navBar">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" id="gisauBrand" href="#">GISAU</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav" id="gisauTabs">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="index.html#about">ABOUT</a></li>
-                    <li><a href="event.html">EVENTS</a></li>
-                    <li><a href="team.html">TEAM</a></li>
-                    <li><a href="community.html">PARTNERSHIP</a></li>
-                    <li><a href="index.html#contact">JOIN US</a></li>
-                </ul>
 
-                <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
-                    <li><a href="#contact"><img src="media/email.png"></a></li>
-                    <li><a href="https://www.facebook.com/gisaubc/"><img src="media/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/gisaubc/"><img src="media/instagram.png"></a></li>
-                    <li><a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png"></a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</div>
-<div>
+<div id="nav-placeholder"></div> <!-- navbar -->
+
     <div class="upcoming_title"><h1><b>Upcoming Event</b></h1></div>
     <div class="upcoming_box">
         <div class="poster">
@@ -90,49 +62,49 @@
         <div class="rantangan_title"><h1><b>Rantangan</b></h1></div>
         <div class="rantanganBox">
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/ayamkecap.png">
+                <img class="rantanganIcon" src="media/rantanganpic/ayamkecap.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Ayam Bakar Kecap</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/ayamrujak.png">
+                <img class="rantanganIcon" src="media/rantanganpic/ayamrujak.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Ayam Bumbu Rujak</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/mieayam.png">
+                <img class="rantanganIcon" src="media/rantanganpic/mieayam.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Mie Ayam</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/nasgor.png">
+                <img class="rantanganIcon" src="media/rantanganpic/nasgor.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Nasi Goreng</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/ayambali.png">
+                <img class="rantanganIcon" src="media/rantanganpic/ayambali.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Nasi Kuning Ayam Suwir Bali</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/opor.png">
+                <img class="rantanganIcon" src="media/rantanganpic/opor.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Opor Ayam</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/rendang.png">
+                <img class="rantanganIcon" src="media/rantanganpic/rendang.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Rendang</h2></div>
                 </div>
             </div>
             <div class="rantanganContainer">
-                <img class="rantanganIcon" src="rantanganpic/sapotahu.png">
+                <img class="rantanganIcon" src="media/rantanganpic/sapotahu.png">
                 <div class="rantanganOverlay">
                     <div class="rantanganText"><h2>Sapo Tahu</h2></div>
                 </div>
