Fixed bug: Hyperlink not working in event icons Changed so that facebook links open in new tab

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     <h1>SOCIAL + FOOD</h1>
                     <div class="container">
                         <div>
-                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"></a><img class="eventIcon" src="media/event-icon.png">
+                            <img class="eventIcon" src="media/event-icon.png" alt="Check out our events">
                         </div>
                         <div class="overlay">
-                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"></a><img class="eventIcon" src="media/eventbutton.png">
+                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal" target="_blank"><img class="eventIcon" src="media/eventbutton.png" alt="Check out our events"></a>
                         </div>
                     </div>
                     <div class="eventDesc">
@@ -125,10 +125,10 @@
                     <h1>RANTANGAN</h1>
                     <div class="container">
                         <div>
-                            <a href="https://www.facebook.com/events/1000405170137037/"></a><img class="eventIcon" src="media/food-icon.png">
+                            <img class="eventIcon" src="media/food-icon.png" alt="Check out our rantangan">
                         </div>
                         <div class="overlay">
-                            <a href="https://www.facebook.com/events/1000405170137037/"></a><img class="eventIcon" src="media/foodbutton.png">
+                            <a href="https://www.facebook.com/events/1000405170137037/" target="_blank"><img class="eventIcon" src="media/foodbutton.png" alt="Check out our rantangan"></a>
                         </div>
                     </div>
                     <div class="eventDesc">
@@ -141,10 +141,10 @@
                     <h1>PERKS</h1>
                     <div class="container">
                         <div>
-                            <a href="community.html"></a><img class="eventIcon" src="media/perk-icon.png">
+                            <img class="eventIcon" src="media/perk-icon.png" alt="Check out our sponsors">
                         </div>
                         <div class="overlay">
-                            <a href="community.html"></a><img class="eventIcon" src="media/perkbutton.png">
+                            <a href="community.html"><img class="eventIcon" src="media/perkbutton.png" alt="Check out our sponsors"></a>
                         </div>
                     </div>
                     <div class="eventDesc">
