Changed background for old team pages

--- a/team_2018.html
+++ b/team_2018.html
@@ -23,7 +23,7 @@
 
 <div id="nav-placeholder"></div> <!-- navbar -->
 
-<div class="teamPage">
+<div class="teamPage" style="background: url(media/background/goldenbg.jpg)">
     <div class="pageTitle">
         <img src="media/teamtitle.png" alt="Meet the Team" class="teamPageTitle">
     </div>
