--- a/navbar.html
+++ b/navbar.html
@@ -15,10 +15,10 @@
                     <li><a href="index.html#about">ABOUT</a></li>
                     <li><a href="index.html#events">EVENTS</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             TEAM
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="team.html">2019-2020</a>
                             <a class="dropdown-item" href="team_2018.html">2018-2019</a>
                             <a class="dropdown-item" href="team_2017.html">2017-2018</a>
