last meeting commit rantangan still broken

--- a/event.html
+++ b/event.html
@@ -31,35 +31,12 @@
 <body>
 
 <div id="nav-placeholder"></div> <!-- navbar -->
-
-    <div class="upcoming_title"><h1><b>Upcoming Event</b></h1></div>
-    <div class="upcoming_box">
-        <div class="poster">
-            <img src="media/poster.png" alt="upcoming-poster" class="upcoming_poster">
-        </div>
-        <div class="calendar_container">
-            <div class="calendar">
-                <div class="day">FRIDAY</div>
-                <div class="date">30</div>
-                <div class="month">NOV</div>
-            </div>
-            <div class="event_info">
-                <div class="name">Drop, Swap & Donate</div>
-                <div class="time">Fri, Nov 30, 11am - 5pm</div>
-                <div class="location">AMS Nest - 2306/09</div>
-            </div>
-            <div class="description">
-                bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
-            </div>
-        </div>
-    </div>
-
+<div class="eventpage">
     <div>
-        <h1><b>Annual Event</b></h1>
+        <div class="title"> <h1><b>Annual Event</b></h1></div>
     </div>
-
-    <div class="rantangan">
-        <div class="rantangan_title"><h1><b>Rantangan</b></h1></div>
+    <div>
+        <div class="title"><h1><b>Rantangan</b></h1></div>
         <div class="rantanganBox">
             <div class="rantanganContainer">
                 <img class="rantanganIcon" src="media/rantanganpic/ayamkecap.png">
@@ -112,6 +89,7 @@
         </div>
     </div>
 </div>
+
 </body>
 
 <footer>
