fixed rantangan TODO: edit index (3 pictures)

--- a/community.html
+++ b/community.html
@@ -221,8 +221,7 @@
                 <p> When you study abroad and got no time for self care, here's a solution for ya! Treat yourself to a
                     haircut at Waverly Barber and get <b>20% off</b> with your GISAU card!
                     They've got talented hairdressers with professional services to make you look extra fresh! </p>
-
-<!--                <p><a href="https://baodown-ubc.business.site/">Visit Waverly Barber here</a></p>-->
+                <p><a href="https://waverly-barber-shop.business.site/">Visit Waverly Barber here</a></p>
             </div>
         </div>
     </div>    
