--- a/event.html
+++ b/event.html
@@ -32,8 +32,63 @@
 
 <div id="nav-placeholder"></div> <!-- navbar -->
 <div class="eventpage">
-    <div>
+    <div class="container-annual">
         <div class="title"> <h1><b>Annual Event</b></h1></div>
+        <div class="carousel">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="car-item">
+                        <img class="car-img" src="media/kits.jpg" alt="...">
+                        <div class="car-info">
+                            <div class="info-title">TITLE</div>
+                            <div class="info-picture">
+                                <img class="info-img" src="media/kits.jpg" alt="...">
+                                <img class="info-img" src="media/kits.jpg" alt="...">
+                                <img class="info-img" src="media/kits.jpg" alt="...">
+                            </div>
+                            <div class="info-description">
+                                Description for event:
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="car-item">
+                        <img class="car-img" src="media/rendang.jpg" alt="...">
+                        <div class="car-info">
+                            <div class="info-title">TITLE</div>
+                            <div class="info-picture">
+                                <img class="info-img" src="media/rendang.jpg" alt="...">
+                                <img class="info-img" src="media/rendang.jpg" alt="...">
+                                <img class="info-img" src="media/rendang.jpg" alt="...">
+                            </div>
+                            <div class="info-description">
+                                Description for event:
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+            </div>
+        </div>
     </div>
     <div>
         <div class="title"><h1><b>Rantangan</b></h1></div>
