--- a/event.html
+++ b/event.html
@@ -27,9 +27,7 @@
     <link rel="stylesheet" href="css/joinus.css">
     <script src="css/navbar.js"></script>
 </head>
-
 <body>
-
 <div id="nav-placeholder"></div> <!-- navbar -->
 <div class="eventpage">
     <div class="container-annual">
@@ -48,7 +46,7 @@
                     <div class="car-item">
                         <img class="car-img" src="media/kits.jpg" alt="...">
                         <div class="car-info">
-                            <div class="info-title">TITLE</div>
+                            <div class="info-title"><p>TITLE</p></div>
                             <div class="info-picture">
                                 <img class="info-img" src="media/kits.jpg" alt="...">
                                 <img class="info-img" src="media/kits.jpg" alt="...">
@@ -64,7 +62,7 @@
                     <div class="car-item">
                         <img class="car-img" src="media/rendang.jpg" alt="...">
                         <div class="car-info">
-                            <div class="info-title">TITLE</div>
+                            <div class="info-title"><p>TITLE</p></div>
                             <div class="info-picture">
                                 <img class="info-img" src="media/rendang.jpg" alt="...">
                                 <img class="info-img" src="media/rendang.jpg" alt="...">
