change fade values covid faq

--- a/covidfaq.html
+++ b/covidfaq.html
@@ -30,44 +30,66 @@
 <img src="media/covid.jpeg" alt="covid" class="covidPageTitle">
 <div id="nav-placeholder"></div> <!-- navbar -->
 <!-- copy everything above this to create new page  -->
-<button type="button" class="collapsible">When to Use A Mask</button>
+<button type="button" class="collapsible">What are the procedures we have to do before going back home?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <ol>
+        <li>Obtain a negative result for COVID-19 from the PCR test. This PCR test will also include a Health Certificate
+            which is also a mandatory document. Documents should be issued 7 days prior to your departure back.</li>
+        <li>It is recommended to have a Surat Jalan from KJRI</li>
+    </ol>
 </div>
-<button type="button" class="collapsible">How to Put On, Use, Take Off and Dispose of a Mask</button>
+<button type="button" class="collapsible">Can I still come back to Canada with my study permit?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>Yes, as long as your study permit and visa is still valid. After your arrival in Canada, you need to be self-quarantined
+    for 14 days. You can apply for your visa online or through the Canadian embassy in Jakarta.</p>
 </div>
-<button type="button" class="collapsible">What are the medications available to treat the infection of the
-    COVID-19 virus?</button>
+<button type="button" class="collapsible">What kinds of documents do I need to go back? What is the best way to prepare them?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>All Indonesian residents who are flying back to Indonesia must provide a health certificate (surat keterangan sehat)
+        and provide proof that you are tested negative for COVID-19 with the PCR test, which is valid for 7 days upon your
+        arrival in Indonesia.
+        <br>We recommend to take the test a week before your departure so that when you receive the results of the test (in 2-3 days),
+        it is still valid, it is still valid when you arrive in Indonesia.
+        <br>There are two types of tests: PCR and Rapid Test. Rapid test is the test that can give out faster results, but this test
+        alone is not enough. The PCR test is the most valid that declares whether or not you are infected by COVID-19 virus. It
+        is recommended to take the test in Canada, so you would not have to do the test again in Indonesia. If you decided to take the
+        test in Indonesia, you must be quarantined in a separate place for 2-3 days.
+    </p>
 </div>
-    <button type="button" class="collapsible">Does the pneumonia vaccine shield you from the COVID-19 virus?</button>
+    <button type="button" class="collapsible">Is Health Certificate and PCR the same document?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>No. Health Certificate is a statement proving that you are healthy. That certificate can include the results of your PCR
+        test. Furthermore, the health certificate can also include statements sating that you are showing no symptoms of COVID-19,
+        further strengthening your eligibility to return to Indonesia safely.
+    </p>
 </div>
-<button type="button" class="collapsible">How long does the COVID-19 virus last on surfaces?</button>
+<button type="button" class="collapsible">Are there any flights to Indonesia? Where should I make my transit when flying back home?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>There are currently very limited flight options to Indonesia. A lot of countries still have their borders closed. Based on our notes, these airlines are open but it is important for you to check again: Air Canada via. Incheon, Garuda Indonesia, Qatar Airways via. Montreal and Doha, ANA via. Haneda.
+        For transits in Japan, please ensure that the status of their borders are open.
+        Transits via. USA requires a valid visa. Although there are flights available to Jakarta, transits via. Vietnam or Hong Kong are still unavailable until 30 May 2020 or until further notice.
+    </p>
 </div>
-<button type="button" class="collapsible">What should I do when a family member is showing the COVID-
-    19 symptoms?</button>
+<button type="button" class="collapsible">Are overnight layovers possible?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>Transits in Korea does not require a visa if layovers are less than 24 hours and you are only staying inside the airport during your transit. Hotels are also available inside the airport if needed.</p>
 </div>
-<button type="button" class="collapsible">Does the UV Light kill the Coronavirus?</button>
+<button type="button" class="collapsible">If my visa is expiring this July, is it better to stay in Canada or fly back to extend my visa?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>Before you fly back to Indonesia, it is recommended for you to apply for an extension for your visa. You can apply online from Canada via. IRCC for students whose visas are expiring soon.
+        However, if you must come back to Indonesia, applications can still be done through the Canadian embassy in Jakarta.
+    </p>
 </div>
-<button type="button" class="collapsible">Can the Coronavirus spread through mosquito bites?</button>
+<button type="button" class="collapsible">For students who are currently in Indonesia, what documents do I need to come back to Canada?</button>
 <div class="content">
     <p>asd asd asd asd asd </p>
 </div>
 <button type="button" class="collapsible">Why should you isolate yourself for 14 days if you are suspected
     to have the virus?</button>
 <div class="content">
-    <p>asd asd asd asd asd </p>
+    <p>As of right now, statement letters are not needed. However, you must be healthy and own a valid visa. If you do not own these documents and show symptoms of COVID-19, you will be stopped from boarding and entering Canada.
+        All international passengers must self-quarantine upon landing even though they are not showing any symptoms.
+    </p>
 </div>
 
 <script src="css/covidfaq.js"></script>
