--- a/navbar.html
+++ b/navbar.html
@@ -11,9 +11,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav" id="gisauTabs">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="index.html#about">ABOUT</a></li>
-                    <li><a href="index.html#events">EVENTS</a></li>
+                    <li class="nav-item"><a href="index.html">HOME</a></li>
+                    <li class="nav-item"><a href="index.html#about">ABOUT</a></li>
+                    <li class="nav-item"><a href="index.html#events">EVENTS</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             TEAM
@@ -24,8 +24,9 @@
                             <a class="dropdown-item" href="team_2017.html">2017-2018</a>
                         </div>
                     </li>
-                    <li><a href="community.html">PARTNERSHIP</a></li>
-                    <li><a href="index.html#contact">JOIN US</a></li>
+                    <li class="nav-item"><a href="community.html">PARTNERSHIP</a></li>
+                    <li class="nav-item"><a href="index.html#contact">JOIN US</a></li>
+                    <li class="nav-item"><a style="color:red; font-weight: bolder" href="covidfaq.html">COVID-19 FAQ</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
