Covid faq ready for release

--- a/community.html
+++ b/community.html
@@ -60,8 +60,9 @@
                     <img src="media/permai.png" alt="permai" class="sponsorImg">
                 </div>
                 <p>
-                PERMAI-BC is a non-profit and non-political organization with missions to foster closer cooperation,
+                    PERMAI-BC is a non-profit and non-political organization with missions to foster closer cooperation,
                     to become a source hub among Indonesians in BC, and to introduce Indonesian arts and culture to Canadians in general.
+                    <br> <a href="http://permaibc.ca/" target="_blank">Visit their website</a>
                 </p>
             </div>
 
