--- a/covidfaq.html
+++ b/covidfaq.html
@@ -219,10 +219,18 @@
     <div>Have more questions?</div>
     <div class="contactContainer">
         <div class="contactBox">
-            Contact Us <br> Check out our social media links on the bottom of the page ↓
+            Contact Us <br> Check out our social media links on the bottom of the page ↓ <br>
+            <img src="media/gisaulogo.png" class="logo">
         </div>
         <div class="contactBox">
-            KJRI <br> 123456 <br> <img src="media/permika.png" class="permika-logo" alt="permika logo">
+            KJRI <br> Phone: (604) 682-8855 <br> Or <a href="http://www.kemlu.go.id/vancouver" target="_blank" class="links">Visit their website</a> <br>
+            <img src="media/cgri.png" class="logo" alt="kjri logo">
+        </div>
+        <div class="contactBox">
+            PERMAI BC <br>
+            E-mail: <a href="mailto:hello@permaibc.ca" class="links">hello@permaibc.ca</a> <br>
+            OR <a href="http://permaibc.ca/" target="_blank" class="links">Visit their website</a> <br>
+            <img src="media/permai.png" alt="permai logo" class="logo">
         </div>
     </div>
 </div>
