fixed permai to permika

--- a/covidfaq.html
+++ b/covidfaq.html
@@ -201,14 +201,8 @@
     </div>
     <button type="button" class="collapsible">For students who are currently in Indonesia, what documents do I need to come back to Canada?</button>
     <div class="content">
-        <p>asd asd asd asd asd </p>
-    </div>
-    <button type="button" class="collapsible">Why should you isolate yourself for 14 days if you are suspected
-        to have the virus?</button>
-    <div class="content">
         <p>As of right now, statement letters are not needed. However, you must be healthy and own a valid visa. If you do not own these documents and show symptoms of COVID-19,
-            you will be stopped from boarding and entering Canada. All international passengers must self-quarantine upon landing even though they are not showing any symptoms.
-        </p>
+            you will be stopped from boarding and entering Canada. All international passengers must self-quarantine upon landing even though they are not showing any symptoms.</p>
     </div>
 
 <script src="css/covidfaq.js"></script>
@@ -216,7 +210,7 @@
 
 <div class="contactmore">
     <br>
-    <div>Have more questions?</div>
+    <div style="padding-left: 30px">Have more questions?</div>
     <div class="contactContainer">
         <div class="contactBox">
             Contact Us <br> Check out our social media links on the bottom of the page ↓ <br>
@@ -227,10 +221,10 @@
             <img src="media/cgri.png" class="logo" alt="kjri logo">
         </div>
         <div class="contactBox">
-            PERMAI BC <br>
-            E-mail: <a href="mailto:hello@permaibc.ca" class="links">hello@permaibc.ca</a> <br>
-            OR <a href="http://permaibc.ca/" target="_blank" class="links">Visit their website</a> <br>
-            <img src="media/permai.png" alt="permai logo" class="logo">
+            PERMIKA Vancouver <br>
+            E-mail: <a href="mailto:permika.vancouver@gmail.com" class="links">permika.vancouver@gmail.com</a> <br>
+            OR <a href="https://www.permikavancouver.com/" target="_blank" class="links">Visit their website</a> <br>
+            <img src="media/permika.png" alt="permai logo" class="logo">
         </div>
     </div>
 </div>
