changed how footer is implemented + bug fixes in footer

--- a/community.html
+++ b/community.html
@@ -225,15 +225,5 @@
                 <p><a href="https://waverly-barber-shop.business.site/">Visit Waverly Barber here</a></p>
             </div>
         </div>
-    </div>    
-    <footer>
-        <div class="footsocial">
-            <a href="index.html#contact"><img src="media/email.png" alt="fb" class="footsocial email"></a>
-            <a href="https://www.facebook.com/gisaubc/" target="_blank"><img src="media/facebook.png" alt="fb" class="footsocial facebook"></a>
-            <a href="https://www.instagram.com/gisaubc/" target="_blank"><img src="media/instagram.png" alt="ig" class="footsocial instagram"></a>
-            <a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png" alt="yt" class="footsocial youtube"></a>
-        </div>
-        <div class="copyright">
-            Copyright GISAU
-        </div>
-    </footer> 
+    </div>
+<footer id="footer"></footer>
