--- a/index.html
+++ b/index.html
@@ -184,19 +184,7 @@
         
     </div>
 </div>
-
-    <footer>
-
-        <div class="footsocial">
-            <a href="#contact"><img src="media/email.png" alt="fb" class="footsocial email"></a>
-            <a href="https://www.facebook.com/gisaubc/" target="_blank"><img src="media/facebook.png" alt="fb" class="footsocial facebook"></a>
-            <a href="https://www.instagram.com/gisaubc/" target="_blank"><img src="media/instagram.png" alt="ig" class="footsocial instagram"></a>
-            <a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png" alt="fb" class="footsocial youtube"></a>
-        </div>
-        <div class="copyright">
-            Copyright GISAU
-        </div>
-    </footer>
 </body>
+<footer id="footer"></footer>
 </html>
 
