--- a/team_2018.html
+++ b/team_2018.html
@@ -271,17 +271,6 @@
     </div>
 </div>
 
-<footer>
-    <div class="footsocial">
-        <a href="#"><img src="media/email.png" alt="fb" class="footsocial email"></a>
-        <a href="https://www.facebook.com/gisaubc" target="_blank"><img src="media/facebook.png" alt="fb" class="footsocial facebook"></a>
-        <a href="https://www.instagram.com/gisaubc/"><img src="media/instagram.png" alt="ig" class="footsocial instagram"></a>
-        <a href="https://www.youtube.com/user/GISAUBC"><img src="media/youtube.png" alt="yt" class="footsocial youtube"></a>
-    </div>
-    <div class="copyright">
-        Copyright GISAU
-    </div>
-
-</footer>
+<footer id="footer"></footer>
 </body>
 </html>
