--- a/covidfaq.html
+++ b/covidfaq.html
@@ -36,7 +36,7 @@
     <div class="content">
         <ul class="list_indent">
             <li>
-                If you are healthy, wear a mask only if you are taking care of a person infected by the COVD-19 virus
+                If you are healthy, wear a mask only if you are taking care of a person infected by the COVID-19 virus
             </li>
             <li>
                 Wear a mask if you are coughing or sneezing
@@ -208,6 +208,9 @@
 <script src="css/covidfaq.js"></script>
 </div>
 
+<div>
+
+</div>
 <div class="contactmore">
     <br>
     <div style="padding-left: 30px">Have more questions?</div>
