Javascript css file

--- a/descan.html
+++ b/descan.html
@@ -24,12 +24,14 @@
     <link rel="stylesheet" href="css/joinus.css">
     <link rel="stylesheet" href="css/covidfaq.css">
     <script src="css/navbar.js"></script>
+    <script src="css/countdown.js"></script>
 </head>
 
 <body>
 <div id="nav-placeholder"></div> <!-- navbar -->
-<img src="media/covid.jpeg" alt="covid" class="covidPageTitle">
 <!-- copy everything above this to create new page  -->
+
+<p id="demo"></p>
 
 <div class="contactmore">
     <br>
