--- a/descan.html
+++ b/descan.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/joinus.css">
     <link rel="stylesheet" href="css/covidfaq.css">
+    <link rel="stylesheet" href="css/descan.css">
     <script src="css/navbar.js"></script>
     <script src="css/countdown.js"></script>
 </head>
@@ -31,27 +32,25 @@
 <div id="nav-placeholder"></div> <!-- navbar -->
 <!-- copy everything above this to create new page  -->
 
-<p id="demo"></p>
+<div class="title_descan">
+    <p id="demo" class="timer solid"></p>
+</div>
 
 <div class="contactmore">
-    <br>
-    <div style="padding-left: 30px">Have more questions?</div>
-    <div class="contactContainer">
-        <div class="contactBox">
-            Contact Us <br> Check out our social media links on the bottom of the page ↓ <br>
-            <img src="media/gisaulogo.png" class="logo">
-        </div>
-        <div class="contactBox">
-            KJRI <br> Phone: (604) 682-8855 <br> Or <a href="http://www.kemlu.go.id/vancouver" target="_blank" class="links">Visit their website</a> <br>
-            <img src="media/cgri.png" class="logo" alt="kjri logo">
-        </div>
-        <div class="contactBox">
-            PERMIKA Vancouver <br>
-            E-mail: <a href="mailto:permika.vancouver@gmail.com" class="links">permika.vancouver@gmail.com</a> <br>
-            OR <a href="https://www.permikavancouver.com/" target="_blank" class="links">Visit their website</a> <br>
-            <img src="media/permika.png" alt="permai logo" class="logo">
-        </div>
+    <div style="padding-left: 10px; font-size: 5vw">Sponsored By</div>
+    <div class="sponsor_container">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/event-icon.png">
     </div>
+
 </div>
 
 </body>
