--- a/descan.html
+++ b/descan.html
@@ -37,20 +37,27 @@
 </div>
 
 <div class="contactmore">
+    <div style="padding-left: 10px; font-size: 5vw">In collaboration with: </div>
+    <div class="sponsor_container">
+        <img class="collab_img" src="media/permika1.png">
+        <img class="collab_img" src="media/isoto.png">
+    </div>
+</div>
+
+<div class="contactmore">
     <div style="padding-left: 10px; font-size: 5vw">Sponsored By</div>
     <div class="sponsor_container">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
-        <img class="sponsor_img" src="media/event-icon.png">
+        <img class="sponsor_img" src="media/algoritma.png">
+        <img class="sponsor_img" src="media/artsee.png">
+        <img class="sponsor_img" src="media/kreature.png">
+        <img class="sponsor_img" src="media/zalora.png">
+        <img class="sponsor_img" src="media/maza.png">
+        <img class="sponsor_img" src="media/gin.png">
+        <img class="sponsor_img" src="media/hooman.png">
+        <img class="sponsor_img" src="media/me.png">
+        <img class="sponsor_img" src="media/libsos.png">
+        <img class="sponsor_img" src="media/shopee.png">
     </div>
-
 </div>
 
 </body>
