--- a/descan.html
+++ b/descan.html
@@ -33,6 +33,16 @@
 
 <p id="demo"></p>
 
+
+    <div class="body">
+        <p>
+            Destination Canada 2020 is an online event to help answer all your questions and worries, and of course meet new friends!
+            This event is meant to give incoming students about UBC and aid them with our own survival tips. Of course,
+            you can use this opportunity to meet your potential best friends and test the waters. Transitioning into
+            university life can be pretty intimidating! We know, from experience.
+        </p>
+
+    </div>
 <div class="contactmore">
     <br>
     <div style="padding-left: 30px">Have more questions?</div>
