--- a/descan.html
+++ b/descan.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/joinus.css">
-    <link rel="stylesheet" href="css/covidfaq.css">
+    <link rel="stylesheet" href="css/descan.css">
     <script src="css/navbar.js"></script>
     <script src="css/countdown.js"></script>
 </head>
@@ -35,34 +35,42 @@
 
 
     <div class="body">
-        <p>
+        <div>
             Destination Canada 2020 is an online event to help answer all your questions and worries, and of course meet new friends!
             This event is meant to give incoming students about UBC and aid them with our own survival tips. Of course,
             you can use this opportunity to meet your potential best friends and test the waters. Transitioning into
             university life can be pretty intimidating! We know, from experience.
-        </p>
+        </div>
 
+        <div class="rundown">
+            Event Rundown: <br>
+            09:30 - 09:45: Check in <br>
+            09:45 - 10:00: Speech by Linda Bong and Professor Chris Bennett <br>
+            10:00 - 10:30: Presentation by GISAU and ISOTO (UBC Vancouver and Okanagan) <br>
+            10:30 - 10:40: Presentation by PERMIKA <br>
+            10:40 - 10:45: Break <br>
+            10:45 - 11:05: Question and Answer <br>
+            11:05 - 11:10: Closing and group picture <br>
+            11:10 - 12:00: Breakout groups <br>
+
+            Note:
+            During breakout groups, students will be grouped based on their faculties
+            (UBCO students will be grouped into one) and parents will have their own group.
+        </div>
+
+        <div class="event_details">
+            Event Details and Information <br>
+            <ul class="list_indent">
+                <li>Time: 9:00 AM WIB ; 19:00 PDT</li>
+                <li>Platform: Zoom</li>
+                <li>Audience: Incoming students and parents/guardians</li>
+            </ul>
+            Of course, we are also open to answer your questions and worries!
+
+            Still not enough to convince you? We will let you in on a secret:
+            You'll get discount codes and promos from our sponsors, too!
+        </div>
     </div>
-<div class="contactmore">
-    <br>
-    <div style="padding-left: 30px">Have more questions?</div>
-    <div class="contactContainer">
-        <div class="contactBox">
-            Contact Us <br> Check out our social media links on the bottom of the page ↓ <br>
-            <img src="media/gisaulogo.png" class="logo">
-        </div>
-        <div class="contactBox">
-            KJRI <br> Phone: (604) 682-8855 <br> Or <a href="http://www.kemlu.go.id/vancouver" target="_blank" class="links">Visit their website</a> <br>
-            <img src="media/cgri.png" class="logo" alt="kjri logo">
-        </div>
-        <div class="contactBox">
-            PERMIKA Vancouver <br>
-            E-mail: <a href="mailto:permika.vancouver@gmail.com" class="links">permika.vancouver@gmail.com</a> <br>
-            OR <a href="https://www.permikavancouver.com/" target="_blank" class="links">Visit their website</a> <br>
-            <img src="media/permika.png" alt="permai logo" class="logo">
-        </div>
-    </div>
-</div>
 
 </body>
 <footer id="footer"></footer>
