fixed navbar overlap added title (need some work for phone) added button resized isoto image

--- a/descan.html
+++ b/descan.html
@@ -18,9 +18,6 @@
     <script src="css/googleanalytics.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/navigation-style.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/joinus.css">
     <link rel="stylesheet" href="css/descan.css">
     <script src="css/navbar.js"></script>
@@ -32,6 +29,7 @@
 <!-- copy everything above this to create new page  -->
 
 <div class="title_descan">
+    <p class="title">Destination Canada</p>
     <p id="demo" class="timer solid"></p>
 </div>
 
@@ -39,7 +37,7 @@
     <div style="padding-left: 10px; font-size: 5vw">In collaboration with: </div>
     <div class="sponsor_container">
         <img class="collab_img" src="media/permika1.png">
-        <img class="collab_img" src="media/isoto.png">
+        <img class="collab_img" src="media/isoto1.png">
     </div>
 </div>
 
@@ -80,6 +78,10 @@
             Still not enough to convince you? We will let you in on a secret:
             <b>You'll get discount codes and promos from our sponsors, too!</b>
         </div>
+
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScI6gk3799LDnYXV_IX2Rgc8ilyvX3tsb8m8WasUyo4Xo8mMg/viewform" target="_blank">
+            <button class="rsvp">RSVP</button>
+        </a>
     </div>
     <div class="contactmore">
         <div style="padding-left: 10px; font-size: 5vw">Sponsored By:</div>
