--- a/descan.html
+++ b/descan.html
@@ -29,13 +29,16 @@
 <!-- copy everything above this to create new page  -->
 
 <div class="title_descan">
-    <p class="title">Destination Canada</p>
-    <p id="demo" class="timer solid"></p>
+    <div class="title-container">
+        <p class="title">Destination Canada</p>
+        <p id="demo" class="timer solid"></p>
+    </div>
+
 </div>
 
 <div class="contactmore">
     <div style="padding-left: 10px; font-size: 5vw">In collaboration with: </div>
-    <div class="sponsor_container">
+    <div class="collab_container">
         <img class="collab_img" src="media/permika1.png">
         <img class="collab_img" src="media/isoto1.png">
     </div>
