--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,7 @@
                     </li>
                     <li class="nav-item"><a href="community.html">PARTNERSHIP</a></li>
                     <li class="nav-item"><a href="index.html#contact">JOIN US</a></li>
-                    <li class="nav-item"><a style="color:red; font-weight: bolder" href="covidfaq.html">COVID-19 FAQ</a></li>
+                    <li class="nav-item"><a style="color:red; font-weight: bolder" href="descan.html">DESTINATION CANADA</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right" id="gisaunavsocial">
